@@ -1,3 +1,7 @@
+2008-06-30  Alejandro G. Castro <acastro@igalia.com>
+
+	* src/baobab-treemap.h: Fixed a typo applying the last patch.
+
 2008-06-28  Alejandro G. Castro <acastro@igalia.com>
 
 	Patch contributed by Eduardo Lima <elima@igalia.com>, bug #530512
